# unitree_mujoco

./: .gitignore  CMakeLists.txt  package.xml  readme.md  readme_zh.md
config/: robot_driver.yaml
example/cpp/: CMakeLists.txt
include/robot_driver/: robot_driver.hpp
include/robot_driver_pkg/: robot_driver.hpp
launch/: driver_.launch.py  mujoco_sim.launch.py  robot_driver.launch.py
models/: mujoco_params.yaml  scene_terrain.xml
models/assets/: Link_FL_Calf.STL  Link_FL_Foot.STL  Link_FL_Hip.STL  Link_FR_Foot.STL  Link_FR_Hip.STL  Link_HR_Foot.STL  Link_HR_Hip.STL  Link_Imu.STL
msg/: MotorCommandArray.msg
simulate/src/: main.cc  unitree_sdk2_bridge.h
simulate/src/mujoco/: simulate.cc
src/: controller_node.cpp  driver_mujoco.cpp  driver_roshw.cpp  mujoco_sim_node.cpp  robot_driver_mujoco.cpp  robot_driver_roshw.cpp
src/install/: local_setup.sh  setup.sh
src/install/robot_msgs/include/robot_msgs/robot_msgs/msg/: motor_command_array.h
src/install/robot_msgs/include/robot_msgs/robot_msgs/msg/detail/: motor_command__builder.hpp  motor_command__functions.c  motor_command__struct.h  motor_command__struct.hpp  motor_command__traits.hpp  motor_command__type_support.c  motor_command__type_support.cpp  motor_command_array__builder.hpp  motor_command_array__functions.c  motor_command_array__rosidl_typesupport_fastrtps_c.h  motor_command_array__type_support.c  motor_command_array__type_support.cpp  motor_command_array__type_support.hpp
src/install/robot_msgs/local/lib/python3.10/dist-packages/robot_msgs/: _robot_msgs_s.ep.rosidl_typesupport_c.c  _robot_msgs_s.ep.rosidl_typesupport_fastrtps_c.c
src/install/robot_msgs/local/lib/python3.10/dist-packages/robot_msgs/msg/: _motor_command_array.py  _motor_command_array_s.c  _motor_command_s.c
src/install/robot_msgs/share/ament_index/resource_index/rosidl_interfaces/: robot_msgs
src/install/robot_msgs/share/robot_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
src/install/robot_msgs/share/robot_msgs/msg/: MotorCommand.idl
src/log/: latest_build
src/robot_msgs/: CMakeLists.txt
src/robot_msgs/msg/: MotorCommand.msg
xml_bruce/: bruce.xml  bruce_mj.xml  scene.xml
xml_bruce/assets/: Link_FR_Calf.STL  Link_HL_Foot.STL  Link_HL_Hip.STL  Link_HR_Calf.STL
