<?xml version="1.0"?>
<package format="3">
  <name>robot_driver_pkg</name>
  <version>0.0.1</version>
  <description>Robot driver package with hardware and Mujoco backends</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robot_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>